variants/geany-bobgui/subprojects/bobgui/testsuite/css/parser/animation-crash-3.12.errors
animation-crash-3.12.css:2:14-18: error: BOBGUI_CSS_PARSER_ERROR_SYNTAX
